fixing alignment issue

--- a/src/Home/components/Heading/Heading.module.css
+++ b/src/Home/components/Heading/Heading.module.css
@@ -13,7 +13,8 @@
 .banner h3{
     margin-bottom: 40px;
 }
-.banner button{
+.banner a{
+    display: inline-block;
     padding: 20px 35px;
     margin-top: 43px;
 }
